 - Skill families will now be condensed into a single dropdown. Old save patching must be enabled when updating for this to work properly.
 - Completed the salvaging system. Many items throughout the entire game are now salvageable, making the system much more relevant.
 - Greatly reduced respawn timers of most time-based respawnables.
 - Leveling up will also remove all debuffs.
 - Changed up the preloader / title screen background.
 - Reverted most dungeons back to the old dungeon map border style (same as the indoors style).
 - Many shops have had their stock changed. Some enemy drop pools have also been adjusted.
 - The 4-skeleton enemy troop now spawns frequently anywhere in the "Forest Arena...?" after the penultimate Laeryidyean cutscene.
  ~ Additionally, the Adonian Monsters troop has been altered. No troops with the Skeleton can be encountered anymore, effectively removing the enemy from the game.
 - Contingence also can apply Amnesia.
 - Item prefixes no longer affect an item's alphabetical sorting.
 - Renaming an item can no longer modify the prefix or the boost count.
 - Uncrafted items now display their mask name if in an ingredient list. Additionally, the color of an ingredient now changes depending on if the player has enough of the item.
 - Being defeated by a Lost Soul in the Great Pyramid will now send you back to the start of the dungeon instead of giving a game over.
 - Raw Meat and Salt-Grilled Meat have been changed to Raw Bear Meat and Salt-Grilled Bear Meat, respectively.
 - Many food-related items have been made renewable, thus being removed from Dalia's shop.
 - Unknown enemy weaknesses now show a question mark icon.
 - Removed the item discard feature, since I'm pretty sure not a single person has ever used it once and it was just menu clutter.
 - Removed the Raw Fish and Cooked Fish items due to the new fishing system having specific types of fish and dishes.
 - The night overlay now shows in battle.