@@ -293,6 +293,7 @@ Changes:
  - Completed the salvaging system. Many items throughout the entire game are now salvageable, making the system much more relevant.
  - Greatly reduced respawn timers of most time-based respawnables.
  - Leveling up will also remove all debuffs.
+ - Victory aftermath now shows if a learnable skill has become available by leveling up.
  - Changed up the preloader / title screen background.
  - Reverted most dungeons back to the old dungeon map border style (same as the indoors style).
  - Many shops have had their stock changed. Some enemy drop pools have also been adjusted.
